--- a/config/database.yml
+++ b/config/database.yml
@@ -8,18 +8,20 @@ default: &default
 development:
   <<: *default
   database: blog_dev
-  username: blog_dev_user
-  host: 127.0.0.1
+  username: <%= ENV["DATABASE_USER"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
+  host: <%= ENV["DATABASE_HOST"] %>
  
 test:
   <<: *default
   database: blog_test
-  username: blog_test_user
-  host: 127.0.0.1
+  username: <%= ENV["DATABASE_USER"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
+  host: <%= ENV["DATABASE_HOST"] %>
 
 production:
   <<: *default
   database: blog_prod
-  username: blog_prod_user
-  password: <%= ENV["BLOG_DATABASE_PASSWORD"] %>
-  host: definit.host.depois
+  username: <%= ENV["DATABASE_USER"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
+  host: <%= ENV["DATABASE_HOST"] %>
