login design created

--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,7 @@
 /tmp/storage/*
 !/tmp/storage/
 !/tmp/storage/.keep
-
 /public/assets
-
 /config/application.yml
-
 /config/credentials.yml.enc
+/config/database.yml
